# scrappy

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: quality.yml  scrape_ipo.yml  scrape_market.yml
data/ipo/: ipo_feed.json
data/nepse/: market_summary_timeseries.csv  today_price_timeseries.csv
data/nepse/2026/03/: market_summary_2026-03-31.csv  today_price_2026-03-31.csv
data/nepse/2026/04/: market_summary_2026-04-01.csv  market_summary_2026-04-02.csv  market_summary_2026-04-03.csv  market_summary_2026-04-04.csv  market_summary_2026-04-05.csv  market_summary_2026-04-06.csv  market_summary_2026-04-07.csv  market_summary_2026-04-08.csv  market_summary_2026-04-09.csv  market_summary_2026-04-10.csv  market_summary_2026-04-13.csv  market_summary_2026-04-15.csv  market_summary_2026-04-16.csv  market_summary_2026-04-17.csv  market_summary_2026-04-20.csv  market_summary_2026-04-21.csv  market_summary_2026-04-22.csv  market_summary_2026-04-23.csv  market_summary_2026-04-24.csv  market_summary_2026-04-27.csv  market_summary_2026-04-28.csv  market_summary_2026-04-29.csv  market_summary_2026-04-30.csv  today_price_2026-04-01.csv  today_price_2026-04-02.csv  today_price_2026-04-03.csv  today_price_2026-04-04.csv  today_price_2026-04-05.csv  (+18 more)
scraper/: __init__.py  cli.py  config.py  io.py
scraper/ipo/: __init__.py  classifier.py  common.py  service.py  sources.py
scraper/nepse/: __init__.py  client.py  fallback.py  market.py
tests/: test_classifier.py  test_ipo_service.py  test_market_fallback.py  test_sources_and_io.py
